--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\kking\\AppData\\Roaming\\NetBeans\\7.3\\build.properties
+user.properties.file=/Users/colin/Library/Application Support/NetBeans/8.0/build.properties
